declarative/processor/src/test/resources/good/graph extends Model.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Graph;

@Graph
interface X extends org.apache.jena.rdf.model.Model {
}
