declarative/processor/src/test/resources/bad/graph is not an interface.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Graph;

@Graph
class X {
}
